# python-fake-news

./: main.py  pyproject.toml
